try to fix differencies on ios

--- a/frontend/src/Components/Pages/HomePage/HomePage.scss
+++ b/frontend/src/Components/Pages/HomePage/HomePage.scss
@@ -7,6 +7,7 @@ $tablet-st: 1.5;
   background-color: $primary-color;
   display: flex;
   justify-content: center;
+  
 
   @include phone-style {
     height: 440px;
@@ -22,14 +23,15 @@ $tablet-st: 1.5;
     align-items: center;
     height: calc(440px * $tablet-st);
   }
+
+  &__wrapper {
+    height: 100%;
+  }
   
   &__container {
    position: relative;
    width: 100%;
    height: 725px;
-   margin: 0 42px 0 43px;
-   place-content: center;
-  
    background-color: $primary-color;
 
    display: grid;
@@ -41,6 +43,8 @@ $tablet-st: 1.5;
    background-repeat: no-repeat;
    background-size: 100%;
 
+  
+
    @include phone-style {
      width: 100%;
      grid-template-columns: repeat(4, 73px);
@@ -50,12 +54,6 @@ $tablet-st: 1.5;
      height: 100%;
      margin: 0;
      padding: 16px 16px 0;
-
-     @supports (-webkit-touch-callout: none) {
-      place-content: unset;
-      left: 50%;
-      transform: translate(-50%);
-    }
    }
 
    @include laptop-style {
